@@ -8,6 +8,7 @@
 
 	- Fixed ListAddAt() with a negative index - now it returns false, since
 	  nothing is added.
+	- Added ListNew() function.
 	
 
 0.9BETA13
